fix home page view and sizing on mobile device with bootstrap

--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -19,6 +19,7 @@ div#content {
 }
 div.welcome-banner {
 	background: url("../images/silver-grey-gradient.gif") repeat-x scroll 0 0 #ffffff;
+	background-size: auto 100%;
 	padding: 10 20;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
